--- a/package.json
+++ b/package.json
@@ -4,10 +4,19 @@
   "description": "Travel calendar",
   "main": "index.js",
   "dependencies": {
-    "google-auth-library": "^0.10.0",
-    "googleapis": "^20.1.0"
+    "body-parser": "1.17.2",
+    "ejs": "2.5.7",
+    "errorhandler": "1.5.0",
+    "express": "4.15.4",
+    "google-auth-library": "0.10.0",
+    "googleapis": "20.1.0",
+    "mongodb": "2.2.31",
+    "request": "2.81.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "chai": "4.1.1",
+    "nodemon": "1.11.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
