--- a/package.json
+++ b/package.json
@@ -4,25 +4,73 @@
   "description": "Travel calendar",
   "main": "index.js",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "1.17.2",
+    "connect-flash": "0.1.1",
+    "connect-mongo": "1.3.2",
+    "cookie-parser": "1.4.3",
+    "cors": "2.8.4",
     "ejs": "2.5.7",
     "errorhandler": "1.5.0",
     "express": "4.15.4",
+    "express-session": "1.15.5",
+    "extract-text-webpack-plugin": "3.0.0",
     "google-auth-library": "0.10.0",
     "googleapis": "20.1.0",
+    "method-override": "2.3.9",
     "mongodb": "2.2.31",
-    "request": "2.81.0"
+    "mongoose": "4.11.7",
+    "node-sass": "4.5.3",
+    "passport": "0.4.0",
+    "passport-local": "1.0.0",
+    "passport-local-mongoose": "4.1.0",
+    "postcss-cssnext": "3.0.2",
+    "postcss-loader": "2.0.6",
+    "precss": "2.0.0",
+    "request": "2.81.0",
+    "sass-loader": "6.0.6",
+    "style-loader": "0.18.2",
+    "vue": "2.4.2",
+    "vuex": "2.3.1",
+    "yargs": "8.0.2"
   },
   "devDependencies": {
+    "babel-cli": "6.26.0",
+    "babel-core": "6.26.0",
+    "babel-eslint": "7.2.3",
+    "babel-jest": "20.0.3",
+    "babel-loader": "7.1.2",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-stage-0": "6.24.1",
+    "babel-preset-vue": "1.2.1",
+    "babel-register": "6.26.0",
     "chai": "4.1.1",
-    "nodemon": "1.11.0"
+    "cross-env": "5.0.5",
+    "css-loader": "0.28.5",
+    "eslint": "4.5.0",
+    "eslint-plugin-vue": "2.1.0",
+    "file-loader": "0.11.2",
+    "husky": "0.14.3",
+    "jest": "20.0.4",
+    "jsdom": "11.2.0",
+    "nodemon": "1.11.0",
+    "vue-eslint-parser": "1.0.0",
+    "vue-loader": "13.0.4",
+    "webpack": "3.5.5",
+    "webpack-dev-server": "2.7.1"
   },
   "scripts": {
-    "build": "./node_modules/.bin/cross-env NODE_ENV=production webpack --progress",
-    "build:dev": "./node_modules/.bin/cross-env NODE_ENV=development webpack-dev-server --open --inline --hot",
-    "test": "",
+    "build": "./node_modules/.bin/cross-env NODE_ENV=production webpack --progress --config ./internals/webpack/webpack.prod.config.js",
+    "build:dev": "./node_modules/.bin/cross-env NODE_ENV=development webpack-dev-server --open --inline --hot --config ./internals/webpack/webpack.dev.config.js",
+    "lint": "yarn lint:js",
+    "lint:js": "eslint ./",
+    "precommit": "yarn lint",
+    "prepush": "yarn test",
     "start": "node server.js",
-    "start:dev": "./node_modules/.bin/nodemon server.js"  
+    "start:dev": "./node_modules/.bin/nodemon server.js",
+    "test": "jest --setupTestFrameworkScriptFile=./internals/test/setup.js --testRegex=/source/.*.test.js",
+    "test:tdd": "yarn test -- --watch",
+    "test:coverage": "yarn test -- --coverage --coverageDirectory=coverage"
   },
   "repository": {
     "type": "git",
