--- a/package.json
+++ b/package.json
@@ -4,16 +4,10 @@
   "description": "Travel calendar",
   "main": "index.js",
   "dependencies": {
-    "bcrypt-nodejs": "0.0.3",
     "body-parser": "1.17.2",
-    "connect-flash": "0.1.1",
-    "connect-mongo": "1.3.2",
-    "cookie-parser": "1.4.3",
     "cors": "2.8.4",
-    "ejs": "2.5.7",
     "errorhandler": "1.5.0",
     "express": "4.15.4",
-    "express-session": "1.15.5",
     "extract-text-webpack-plugin": "3.0.0",
     "google-auth-library": "0.10.0",
     "googleapis": "20.1.0",
@@ -21,13 +15,9 @@
     "mongodb": "2.2.31",
     "mongoose": "4.11.7",
     "node-sass": "4.5.3",
-    "passport": "0.4.0",
-    "passport-local": "1.0.0",
-    "passport-local-mongoose": "4.1.0",
     "postcss-cssnext": "3.0.2",
     "postcss-loader": "2.0.6",
     "precss": "2.0.0",
-    "request": "2.81.0",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
     "vue": "2.4.2",
@@ -67,8 +57,8 @@
     "lint:js": "./node_modules/.bin/eslint ./ --ext=js,vue",
     "precommit": "npm run lint",
     "prepush": "npm run test",
-    "start": "node server.js",
-    "start:dev": "./node_modules/.bin/nodemon server.js",
+    "start": "./node_modules/.bin/cross-env NODE_ENV=production node server.js",
+    "start:dev": "./node_modules/.bin/cross-env NODE_ENV=development ./node_modules/.bin/nodemon server.js",
     "test": "./node_modules/.bin/jest --setupTestFrameworkScriptFile=./internals/test/setup.js --testRegex=/source/.*.test.js",
     "test:tdd": "npm run test -- --watch",
     "test:coverage": "npm run test -- --coverage --coverageDirectory=coverage"
