--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "dependencies": {
     "body-parser": "1.17.2",
     "cors": "2.8.4",
+    "ejs": "^2.5.7",
     "errorhandler": "1.5.0",
     "express": "4.15.4",
     "extract-text-webpack-plugin": "3.0.0",
     "google-auth-library": "0.10.0",
     "googleapis": "20.1.0",
     "method-override": "2.3.9",
+    "moment": "^2.18.1",
     "mongodb": "2.2.31",
     "mongoose": "4.11.7",
     "node-sass": "4.5.3",
