--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
   "dependencies": {
     "body-parser": "1.17.2",
     "cors": "2.8.4",
-    "ejs": "^2.5.7",
+    "ejs": "2.5.7",
     "errorhandler": "1.5.0",
     "express": "4.15.4",
     "extract-text-webpack-plugin": "3.0.0",
     "google-auth-library": "0.10.0",
     "googleapis": "20.1.0",
     "method-override": "2.3.9",
-    "moment": "^2.18.1",
+    "moment": "2.18.1",
     "mongodb": "2.2.31",
     "mongoose": "4.11.7",
     "node-sass": "4.5.3",
@@ -23,6 +23,8 @@
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
     "vue": "2.4.2",
+    "vue-router": "2.7.0",
+    "vue-template-compiler": "2.4.2",
     "vuex": "2.3.1",
     "yargs": "8.0.2"
   },
@@ -39,14 +41,17 @@
     "chai": "4.1.1",
     "cross-env": "5.0.5",
     "css-loader": "0.28.5",
-    "eslint": "^4.5.0",
-    "eslint-plugin-vue": "^3.12.0",
+    "eslint": "4.5.0",
+    "eslint-loader": "1.9.0",
+    "eslint-plugin-vue": "3.12.0",
     "file-loader": "0.11.2",
     "html-webpack-plugin": "2.30.1",
     "husky": "0.14.3",
     "jest": "20.0.4",
     "jsdom": "11.2.0",
     "nodemon": "1.11.0",
+    "proxy-middleware": "0.15.0",
+    "url": "0.11.0",
     "vue-eslint-parser": "1.0.0",
     "vue-loader": "13.0.4",
     "webpack": "3.5.5",
