feature(client): add pages

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Travel calendar",
   "main": "index.js",
   "dependencies": {
+    "axios": "0.16.2",
     "body-parser": "1.17.2",
     "cors": "2.8.4",
     "ejs": "2.5.7",
